codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

  1. Yes, implement this plan  Switch to Default and start coding.
› 2. No, stay in Plan mode     Continue planning with the model.

  按  enter 确 认 ， 按  esc 返 回
